--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,13 +1,34 @@
 @font-face {
-  font-family: 'roadradio-black';
-  src: url('../fonts/roadradio-black.woff2') format('woff2'), url('../fonts/roadradio-black.woff') format('woff');
+  font-family: 'circerounded-regular2';
+  src: url('../fonts/circerounded-regular2.woff2') format('woff2'), url('../fonts/circerounded-regular2.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'montserrat-semibold';
-  src: url('../fonts/montserrat-semibold.woff2') format('woff2'), url('../fonts/montserrat-semibold.woff') format('woff');
+  font-family: 'circerounded-regular3';
+  src: url('../fonts/circerounded-regular3.woff2') format('woff2'), url('../fonts/circerounded-regular3.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'circerounded-regular4';
+  src: url('../fonts/circerounded-regular4.woff2') format('woff2'), url('../fonts/circerounded-regular4.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'circerounded-regular5';
+  src: url('../fonts/circerounded-regular5.woff2') format('woff2'), url('../fonts/circerounded-regular5.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserrat-regular';
+  src: url('../fonts/montserrat-regular.woff2') format('woff2'), url('../fonts/montserrat-regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,13 +36,6 @@
 @font-face {
   font-family: 'montserrat-medium';
   src: url('../fonts/montserrat-medium.woff2') format('woff2'), url('../fonts/montserrat-medium.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'delagothicone-regular';
-  src: url('../fonts/delagothicone-regular.woff2') format('woff2'), url('../fonts/delagothicone-regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
