--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -24,6 +24,7 @@ body.locked {
   overscroll-behavior: none;
   -webkit-overflow-scrolling: touch;
   padding: 50px 20px;
+  backdrop-filter: blur(5px);
   @media (max-width: 767px) {
     padding: 20px;
   }
@@ -264,7 +265,6 @@ body.locked {
     display: block;
     columns: 2 280px;
     column-gap: 20px;
-    font-family: var(--500);
     color: var(--grey);
     font-size: 14px;
     line-height: 1.36;
@@ -284,7 +284,6 @@ body.locked {
     margin: 16px 0px;
     a {
       display: inline-block;
-      font-family: var(--500);
       padding: 6px 0px;
       color: var(--grey);
       &:hover {
