--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -21,145 +21,104 @@
   display: inline-flex;
   overflow: hidden;
   z-index: 1;
-  min-height: 72px;
-
+  min-height: 60px;
+  font-family: var(--4);
   justify-content: center;
   align-items: center;
   align-content: center;
   position: relative;
-  font-size: 22px;
-  line-height: 1.2;
-  letter-spacing: 0.66px;
-  color: var(--white);
-  font-family: var(--900);
-  padding: 20px 30px;
+  font-size: 20px;
+  line-height: 1;
+  color: var(--black);
+  padding: 10px 60px;
   z-index: 1;
   transition: color 0.3s;
   user-select: none;
   outline: none;
   cursor: pointer;
   border-radius: 16px;
-  background: #e7cc80;
-  background: linear-gradient(180deg, rgba(231, 204, 128, 1) 0%, rgba(172, 150, 87, 1) 100%);
-  @media (max-width: 767px) {
-    min-height: 52px;
-    padding: 0px 30px;
-  }
+  background: var(--yellow);
+  background: var(--gradient);
   &.full {
     width: 100%;
   }
-  &.big {
-    min-height: 76px;
-    @media (max-width: 767px) {
-      min-height: 52px;
-    }
+  &.button--small {
+    font-size: 18px;
+    min-height: 36px;
+    padding: 4px 24px;
+    border-radius: 12px;
   }
-  &.small {
-    min-height: 52px;
-    padding: 10px 30px;
-  }
-  &.go-back {
-    min-height: 40px;
-    border-radius: 40px;
-    padding: 10px 20px;
-    font-size: 16px;
-    letter-spacing: -0.48px;
+
+  &:before,
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0px;
+    pointer-events: none;
+    width: 60%;
+    height: 100%;
     background: var(--white);
-    color: var(--color);
-    transition: 0.3s;
-    &:before {
-      content: none;
-    }
-    &:hover {
-      color: var(--white);
-      background: var(--brown);
-    }
-    @media (max-width: 767px) {
-      min-height: 28px;
-      padding: 7px 12px;
-      font-size: 12px;
-    }
+    z-index: -1;
+    transition: 0.5s;
   }
 
   &:before {
-    content: '';
-    position: absolute;
     left: 0px;
-    top: 0px;
-    opacity: 0;
-    pointer-events: none;
-    width: 100%;
-    height: 100%;
-    background: #ac9657;
-    background: linear-gradient(180deg, #ac9657 0%, #99823f 100%);
-    z-index: -1;
-    transition: opacity 0.3s;
+    transform: translate(-100%, 0%);
+    border-radius: 0px 10px 10px 0px;
+  }
+
+  &:after {
+    right: 0px;
+    transform: translate(100%, 0%);
+    border-radius: 10px 0px 0px 10px;
   }
 
   &:hover {
-    &:before {
-      opacity: 1;
-    }
-  }
-
-  &.button--markets {
-    pointer-events: all;
-    z-index: 5;
-    width: 100%;
-    max-width: 558px;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
-    background: #b6142b;
-    background: linear-gradient(180deg, #b6142b 0%, #830013 100%);
-
-    &:before {
-      background: #c91631;
-      background: linear-gradient(180deg, #d41733 0%, #970017 100%);
+    &:before,
+    &:after {
+      transform: translate(0%, 0%);
     }
   }
 }
 
-.link {
-  display: block;
-  width: auto;
-  margin: 0 auto;
+.login-btn {
+  display: inline-flex;
   position: relative;
-  font-size: 24px;
-  line-height: 1.1;
-  &::before,
-  &::after {
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 12px;
+  font-size: 18px;
+  color: var(--yellow);
+  font-family: var(--4);
+  line-height: 1;
+
+  span {
+    display: block;
+    position: relative;
+    top: 2px;
+  }
+
+  &:before {
     content: '';
-    position: absolute;
-    bottom: 0;
-    height: 1px;
-    background-color: var(--color);
+    width: 24px;
+    height: 25px;
+    background: url('../img/svg/login.svg') no-repeat center center/cover;
   }
+}
 
-  &::before {
-    right: 0;
-    width: 100%;
-  }
-
-  &::after {
-    left: 0;
-    width: 0;
-    opacity: 0;
-  }
-
-  &:hover {
-    &::before {
-      width: 0;
-      transition: all 0.3s ease;
-    }
-
-    &::after {
-      transition: all 0.3s ease;
-      transition-delay: 0.3s;
-      width: 100%;
-      opacity: 1;
-    }
-  }
-
-  @media (max-width: 767px) {
-    font-size: 18px;
-  }
+.scroll-down {
+  display: block;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  z-index: 4;
+  left: 50%;
+  margin-left: -27px;
+  bottom: 10px;
+  transition: color 0.3s;
+  color: var(--white);
+  background: url('../img/arrow-down.gif') no-repeat center center;
+  background-size: 100% auto;
 }
