--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -8,42 +8,39 @@
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 70px;
+  height: 60px;
   z-index: 20;
-  background: var(--white);
+  background: var(--bg);
   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.6s;
+  transition: box-shadow 0.6s, transform 1s;
+  transform: translate(0%, -150%);
+  border-bottom: 4px solid var(--yellow);
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.2);
 
-  &.fix {
-    transition: box-shadow 0.3s;
-    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.2);
+  .container {
+    display: flex;
+    position: relative;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    gap: 20px;
   }
 }
 
-.header__content {
-  display: flex;
-  position: relative;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  align-content: center;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 10px 30px;
-  gap: myclamp(20px, 48px, 1440px, 1440px);
-
-  @media (max-width: 767px) {
-    max-width: 100%;
-    padding: 5px 20px;
+.loaded {
+  .header {
+    transform: translate(0%, 0%);
   }
 }
 
 .header__logo {
   display: block;
   position: relative;
-  width: 150px;
-  height: 50px;
+  width: 170px;
+  height: 56px;
+
   .logo {
     position: absolute;
     top: 0px;
@@ -53,28 +50,33 @@
 
 .logo {
   display: block;
-  padding: 11.14px 20px;
-  background: var(--color);
   position: relative;
-  width: 150px;
-  height: auto;
+  width: 100%;
+  height: 88px;
   z-index: 3;
+  background: url('../img/svg/logo-bg.svg') no-repeat center center/cover;
   img {
-    width: 100%;
+    position: relative;
+    width: 122px;
     height: auto;
+    margin: 0 auto;
+    margin-top: 10px;
+    z-index: 2;
+    opacity: 1;
+    //box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.8);
   }
-}
 
-.socials {
-  display: flex;
-  gap: 16px;
-  li {
+  &:before {
+    content: '';
     display: block;
-    width: 30px;
-    height: 30px;
-    img {
-      max-width: 100%;
-    }
+    width: 60%;
+    height: 50%;
+    left: 20%;
+    top: 25%;
+    box-shadow: 0px 0px 30px #fff;
+    border-radius: 100%;
+    position: absolute;
+    z-index: 1;
   }
 }
 
@@ -90,73 +92,42 @@
   display: inline-flex;
   flex: 1;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   align-content: center;
-  gap: myclamp(20px, 32px, 1440px, 1440px);
-  @media (max-width: 1365px) {
-    gap: myclamp(20px, 40px, 1440px, 1440px);
-  }
+  gap: 32px;
 
   li {
     .menu__link {
-      font-family: var(--900);
-      font-size: 21px;
-      line-height: 1.2;
-      text-transform: uppercase;
+      font-family: var(--4);
+      font-size: 18px;
+      line-height: 1;
+      transition: color 0.3s;
+      cursor: pointer;
       &.active {
-        color: var(--red);
+        color: var(--yellow);
       }
+      &:hover {
+        color: var(--yellow);
+      }
+    }
+    &:first-child {
+      margin-left: auto;
     }
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1279px) {
-  .header {
-    height: 60px;
-  }
-
-  .header__content {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 5px 20px;
-    gap: 4%;
-  }
-
-  .header__logo {
-    width: 100px;
-  }
-
-  .logo {
-    padding: 6px 10px;
-    width: 100px;
-  }
-
-  .socials {
-    display: flex;
-    gap: 10px;
-  }
-
-  .menu {
-    gap: 4%;
-    li {
-      .menu__link {
-        font-size: 18px;
-      }
-    }
-  }
+.header__buttons {
+  display: inline-flex;
+  position: relative;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+  gap: 24px;
+  margin-left: auto;
 }
 
 @media (max-width: 1023px) {
-  .header {
-    height: 60px;
-  }
-
-  .logo {
-    padding: 6px 10px;
-    width: 90px;
-  }
-
   .burger {
     display: flex;
     position: relative;
@@ -204,11 +175,11 @@
         opacity: 0;
       }
       &:before {
-        background: var(--white);
+        background: var(--bg);
         transform: translate(0px, 0px) rotate(45deg);
       }
       &:after {
-        background: var(--white);
+        background: var(--bg);
         transform: translate(0px, 0px) rotate(-45deg);
       }
     }
@@ -221,11 +192,11 @@
     height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* IE и Edge */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
     top: 0px;
     right: 0px;
-    background: var(--white);
+    background: var(--bg);
     transform: translate(0%, -100%);
     transition: transform 0.6s;
     padding: 0px;
@@ -253,20 +224,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     gap: 10px;
-    .socials {
-      margin-top: 20px;
-    }
     li {
-      .button {
-        padding: 10px 24px;
-        span {
-          font-size: 32px;
-        }
-      }
-      &:last-child {
-        display: block;
-      }
-
       .menu__link {
         font-size: 32px;
       }
