--- a/assets/scss/_preloader.scss
+++ b/assets/scss/_preloader.scss
@@ -4,45 +4,38 @@
   align-items: center;
   align-content: center;
   position: fixed;
+  overflow: hidden;
   width: 100%;
   height: 100%;
   left: 0px;
   top: 0px;
-  z-index: 50;
-  background-color: var(--color);
-  transition: 0.6s;
+  z-index: 19;
+  background-color: var(--bg);
+  transition: 1s;
   opacity: 1;
   visibility: visible;
   pointer-events: all;
   &.hidden {
-    opacity: 0;
-    visibility: hidden;
     pointer-events: none;
+    background-color: rgba(0, 0, 0, 0);
+    z-index: 19;
+    span {
+      transform: translate(0px, -60vh);
+    }
   }
   span {
-    width: 100px;
-    height: 100px;
+    width: 300px;
+    height: 170px;
     display: inline-flex;
     position: relative;
     justify-content: center;
     align-items: center;
     align-content: center;
-    &:before {
-      content: '';
-      width: 100%;
-      height: 100%;
-      border-left: 1px solid rgba(255, 255, 255, 0.7);
-      border-top: 1px solid rgba(255, 255, 255, 0.7);
-      border-right: 1px solid rgba(0, 0, 0, 0);
-      border-bottom: 1px solid rgba(0, 0, 0, 0);
-      border-radius: 150px;
-      display: block;
-      position: absolute;
-      animation: rotate 0.6s linear infinite;
-    }
+    transition: 1s;
     img {
       position: absolute;
-      width: 60%;
+      width: 100%;
+      animation: bounce 3s ease-out infinite;
     }
   }
 }
