--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -27,9 +27,9 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: var(--bg);
+  background-color: var(--white);
   color: var(--color);
-  font-family: var(--900);
+  font-family: var(--400);
   line-height: 1.4;
   overflow-x: hidden;
   overflow-y: auto;
@@ -55,7 +55,7 @@ h6,
 b,
 a,
 strong {
-  font-family: var(--900);
+  font-family: var(--3);
   color: inherit;
 }
 
@@ -78,11 +78,6 @@ menu {
 
 a {
   text-decoration: none;
-}
-
-.blue-gradient {
-  background: var(--color);
-  background: radial-gradient(circle, var(--gradient) 0%, var(--color) 75%);
 }
 
 .custom-scrollbar {
@@ -121,5 +116,38 @@ a {
 .only-in-desctop {
   @media (max-width: 767px) {
     display: none;
+  }
+}
+
+.yellow {
+  color: var(--yellow);
+}
+
+.border-bottom,
+.border-top {
+  &:before,
+  &:after {
+    content: '';
+    width: 100%;
+    height: 52px;
+    position: absolute;
+    z-index: 0;
+    left: 0px;
+    z-index: 4;
+    pointer-events: none;
+  }
+}
+
+.border-bottom {
+  &:after {
+    bottom: 0px;
+    background: url('../img/svg/border-bottom.svg') no-repeat center center/cover;
+  }
+}
+
+.border-top {
+  &:before {
+    top: 0px;
+    background: url('../img/svg/border-top.svg') no-repeat center center/cover;
   }
 }
