--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -1,17 +1,12 @@
 :root {
   --input-font-family: var(--500);
-  --input-font-size: 22px;
-  --input-height: 72px;
+  --input-font-size: 14px;
+  --input-height: 36px;
   --input-background: #ffffff;
-  --input-border: #cccccc;
-  --input-color: var(--color);
-  --input-placeholder-color: rgba(0, 0, 0, 0.2);
-  --invalid: #b7142b;
-
-  @media (max-width: 767px) {
-    --input-font-size: 18px;
-    --input-height: 52px;
-  }
+  --input-border: #ffffff;
+  --input-color: var(--black);
+  --input-placeholder-color: var(--black);
+  --invalid: var(--yellow);
 }
 
 .label {
@@ -59,12 +54,12 @@ span.input-icon {
   width: 100%;
   height: var(--input-height);
   background: var(--input-background);
-  border: 2px solid var(--input-border);
-  border-radius: 25px;
+  border: 1px solid var(--input-border);
+  border-radius: 5px;
   font-family: var(--input-font-family);
   font-size: var(--input-font-size);
   color: var(--input-color);
-  padding: 0px 30px;
+  padding: 0px 18px;
   outline: none;
   appearance: none;
   transition: 0.3s;
@@ -72,6 +67,31 @@ span.input-icon {
   resize: none;
   &.input--select {
     padding-right: var(--input-height);
+    height: 56px;
+    border-radius: 16px;
+    font-family: var(--4);
+    font-size: 20px;
+    padding-right: 56px;
+    cursor: pointer;
+  }
+
+  &.input-search {
+    padding-right: var(--input-height);
+    width: 100%;
+    height: 56px;
+    border-radius: 16px;
+    font-family: var(--4);
+    font-size: 20px;
+    padding-right: 56px;
+    background: rgba(0, 0, 0, 0);
+    color: var(--white);
+    font-family: var(--4);
+    padding-left: 30px;
+    &::placeholder {
+      font-family: var(--4);
+      color: var(--white);
+      font-size: 20px;
+    }
   }
 
   &.placeholder {
@@ -89,18 +109,14 @@ span.input-icon {
   }
 
   &.invalid {
-    border: 2px solid var(--invalid);
+    border: 1px solid var(--invalid);
     color: var(--invalid);
     + .input-icon {
-      color: var(--invalid);
-    }
-    &::placeholder {
       color: var(--invalid);
     }
   }
 
   &:focus {
-    border: 2px solid var(--color);
     &::placeholder {
       opacity: 0;
     }
@@ -201,7 +217,8 @@ textarea {
   display: block;
   width: 100%;
   height: 0px;
-  position: relative;
+  position: absolute;
+  left: -20px;
   text-align: left;
   overflow: hidden;
   transition: 0.3s;
@@ -209,9 +226,26 @@ textarea {
   font-size: 14px;
   font-family: var(--400);
   span {
-    display: block;
-    padding-top: 5px;
-    padding-left: 30px;
+    display: inline-block;
+    position: relative;
+    padding: 5px 14px;
+    color: #442f1e;
+    font-size: 11px;
+    background: var(--yellow);
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
+    top: -14px;
+    left: 0px;
+    margin: 20px;
+    &:before {
+      content: '';
+      width: 8px;
+      height: 8px;
+      background: var(--yellow);
+      position: absolute;
+      left: 14px;
+      top: -3px;
+      transform: scaleX(1.5) rotate(45deg);
+    }
   }
 }
 
