--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -24,7 +24,7 @@ body.locked {
   overscroll-behavior: none;
   -webkit-overflow-scrolling: touch;
   padding: 50px 20px;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(8px);
   @media (max-width: 767px) {
     padding: 20px;
   }
@@ -56,7 +56,7 @@ body.locked {
 .popup {
   position: relative;
   transition: $popup_transition;
-  transform: translate(0px, 20px);
+  transform: translate(0px, 50px);
   opacity: 0;
   z-index: 1;
   user-select: none;
@@ -77,23 +77,21 @@ body.locked {
   }
 }
 
-.popup-close,
-.file-reset {
+.popup-close {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   align-content: center;
   position: absolute;
-  right: 20px;
-  top: 20px;
+  left: 100%;
+  top: -10px;
   width: 38px;
   height: 38px;
   @media (max-width: 767px) {
     right: 14px;
     top: 14px;
   }
-  background: #e8e8e8;
   border-radius: 38px;
   transform: rotate(0deg);
   z-index: 2;
@@ -103,9 +101,9 @@ body.locked {
     position: absolute;
     pointer-events: none;
     width: 60%;
-    height: 4px;
+    height: 3px;
     border-radius: 2px;
-    background: var(--color);
+    background: var(--yellow);
     transition: 0s;
     transition: 0.3s;
   }
@@ -125,170 +123,140 @@ body.locked {
   }
 }
 
-.file-reset {
-  right: -4px;
-  top: -4px;
-  background: var(--invalid);
-  border-radius: 20px;
-  z-index: 2;
-  &::before,
-  &::after {
-    width: 14px;
-    background: var(--white);
-  }
-}
-
 .popup-content {
   user-select: none;
-  border-radius: 30px;
-  background: var(--white);
-  padding: 50px 40px 40px 40px;
-  .button {
-    margin-top: 30px;
-  }
-  @media (max-width: 419px) {
-    width: 100%;
-    border-radius: 25px;
-    padding: 50px 20px 30px 20px;
-  }
+  max-width: 375px;
 }
 
 .popup-title {
-  font-size: 52px;
+  font-size: 32px;
+  line-height: 36px;
   line-height: 0.9;
   color: inherit;
   text-align: center;
-  text-transform: uppercase;
-  @media (max-width: 767px) {
-    font-size: 32px;
+  color: var(--yellow);
+  font-family: var(--4);
+  margin-bottom: 24px;
+  &.white {
+    font-size: 24px;
+    font-family: var(--400);
+    color: var(--white);
+    margin-bottom: 0px;
   }
 }
 
 .popup-subtitle {
-  font-size: 14px;
-  line-height: 1.36;
-  letter-spacing: -0.28px;
+  font-size: 16px;
+  line-height: 1.3;
+  font-family: var(--400);
+  text-align: center;
+  margin-top: 14px;
+
+  b,
+  strong {
+    font-family: var(--4);
+    font-size: 20px;
+  }
+
   &.no-margin {
     margin-bottom: 0px;
   }
 }
 
-#ok {
-  max-width: 500px;
-  .popup-subtitle {
-    display: block;
-    margin: 0 auto;
-    margin-top: 14px;
-    text-align: center;
-    max-width: 300px;
-  }
-  .button {
+.red-wrapper {
+  display: flex;
+  flex-direction: column;
+  background: var(--bg);
+  padding: 50px 30px 30px 30px;
+  border-radius: 24px;
+
+  .buttons {
     display: flex;
-    margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 30px;
+    width: 100%;
+    position: relative;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 10px;
   }
 }
 
-#markets {
-  max-width: 758px;
-  padding: 40px 20px;
-  @media (max-width: 767px) {
-    max-width: 414px;
+.popup-image {
+  display: flex;
+  position: relative;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+#faq {
+  max-width: 640px;
+  .title--h4 {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 0%;
+    transform: translate(0%, -110%);
+  }
+}
+
+.faq {
+  background: var(--bg);
+  border-radius: 16px;
+  overflow: hidden;
+
+  .accordeon {
+    @for $i from 1 through 10 {
+      &:nth-child(#{$i}) {
+        background: rgba(255, 255, 255, ($i - 1) * 0.1);
+      }
+    }
+  }
+}
+
+#production {
+  max-width: 1270px;
+  .title--h4 {
+    text-align: center;
   }
 
-  .markets-list {
+  .production {
     display: flex;
+    position: relative;
+    width: 100%;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    align-content: flex-start;
-    margin-top: 28px;
-    padding: 0px 40px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-    height: 370px;
-    gap: 12px 18px;
-    @media (max-width: 767px) {
-      height: auto;
-      margin-top: 10px;
-      padding: 10px 0px;
-      overflow-y: visible;
-      gap: 14px 12px;
-    }
+    gap: 20px;
     li {
-      display: block;
-      width: calc((100% - 36px) / 3);
-      overflow: hidden;
-      z-index: 1;
-      border-radius: 15px;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
-      @media (max-width: 767px) {
-        width: calc((100% - 12px) / 2);
-        border-radius: 5px;
-      }
-      a,
+      display: flex;
+      position: relative;
+      flex-direction: column;
+      gap: 24px;
+      width: calc((100% - 100px) / 6);
+      text-align: center;
+      font-family: var(--4);
       img {
         width: 100%;
       }
+      h3 {
+        font-size: 24px;
+        color: var(--yellow);
+      }
+      p {
+        font-size: 16px;
+      }
     }
   }
 }
 
-#addresses {
-  padding: 0;
-  border-radius: 50px;
-  background: var(--color);
-  color: var(--white);
-  max-width: 1000px;
-  min-height: 800px;
-  overflow: hidden;
-  .title {
-    text-align: left;
-    line-height: 1.1;
-  }
-
-  .addresses__image {
-    width: 100%;
-  }
-
-  .addresses__content {
-    display: block;
-    width: 100%;
-    padding: 30px 40px;
-    @media (max-width: 767px) {
-      padding: 30px 20px 20px 20px;
-    }
-  }
-
-  .addresses__description {
-    display: block;
-    columns: 2 280px;
-    column-gap: 20px;
-    color: var(--grey);
-    font-size: 14px;
-    line-height: 1.36;
-    margin: 16px 0px;
-    @media (max-width: 999px) {
-      .desctop-only {
-        display: none;
-      }
-    }
-  }
-
-  .addresses__list {
-    columns: 2 280px;
-    column-gap: 20px;
-    font-size: 14px;
-    line-height: 1.36;
-    margin: 16px 0px;
-    a {
-      display: inline-block;
-      padding: 6px 0px;
-      color: var(--grey);
-      &:hover {
-        color: var(--white);
-      }
-    }
+#memory {
+  .memory-preview {
+    width: 85%;
+    margin: 0 auto;
+    margin-top: -110px;
+    margin-bottom: 20px;
   }
 }
