--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -124,6 +124,9 @@ a {
 }
 
 .border-bottom,
+.border-bottom-invers,
+.border-top-invers,
+.border-top-red,
 .border-top {
   &:before,
   &:after {
@@ -149,5 +152,62 @@ a {
   &:before {
     top: 0px;
     background: url('../img/svg/border-top.svg') no-repeat center center/cover;
+  }
+}
+
+.border-top-invers {
+  &:before {
+    top: 0px;
+    background: url('../img/svg/border-top-invers.svg') no-repeat center center/cover;
+  }
+}
+
+.border-top-red {
+  &:before {
+    top: 0px;
+    background: url('../img/svg/border-top-red.svg') no-repeat center center/cover;
+  }
+}
+
+.blik {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  overflow: hidden;
+
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+
+  mask-repeat: no-repeat;
+  mask-position: center;
+
+  &:before {
+    content: '';
+    width: 60%;
+    height: 200%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 100%);
+    opacity: 0.5;
+    transform: translate(-200%, -25%) rotate(-40deg);
+    animation: slide 3s linear infinite;
+    z-index: 3;
+  }
+
+  &.blik--yandex {
+    -webkit-mask-image: url('../img/svg/yandex-small-mask.svg');
+    mask-image: url('../img/svg/yandex-small-mask.svg');
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+
+  &.blik--ozon {
+    -webkit-mask-image: url('../img/svg/ozon-mask.svg');
+    mask-image: url('../img/svg/ozon-mask.svg');
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
   }
 }
