--- a/assets/scss/_swiper.scss
+++ b/assets/scss/_swiper.scss
@@ -18,37 +18,32 @@
 
 .swiper-arrow {
   display: flex;
-  position: relative;
-  width: 50px;
-  height: 50px;
-  @media (max-width: 1279px) {
-    width: 40px;
-    height: 40px;
-  }
-  border-radius: 50px;
+  position: absolute;
+  width: 42px;
+  height: 42px;
   border: none;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   align-content: center;
-  background-color: var(--brown);
-  background-repeat: no-repeat;
-  background-position: center center;
   opacity: 1;
-  transition: background-color 0.3s, opacity 0.3s;
+  transition: opacity 0.3s;
+  z-index: 3;
+  margin-top: -60px;
+
+  top: 50%;
   &[data-arrow-prev] {
-    background-image: url('../img/svg/arrow-prev.svg');
-    background-size: 90% 90%;
+    background: url('../img/svg/arrow-prev.svg') no-repeat center center;
+    background-size: auto 100%;
+    right: calc(100% + 14px);
   }
   &[data-arrow-next] {
-    background-image: url('../img/svg/arrow-next.svg');
-    background-size: 90% 90%;
-  }
-  &:hover {
-    background-color: var(--brown-hover);
+    background: url('../img/svg/arrow-next.svg') no-repeat center center;
+    background-size: auto 100%;
+    left: calc(100% + 14px);
   }
   &.swiper-button-disabled {
-    opacity: 0.5;
+    opacity: 0.3;
     pointer-events: none;
   }
 }
