--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,16 +1,17 @@
-.text-content {
-  display: flex;
-}
-
 .title {
   font-family: var(--3);
   text-transform: uppercase;
 
   &.title--h2 {
     font-size: 44px;
+    text-align: center;
   }
   &.title--h3 {
     font-size: 32px;
+    line-height: 1.12;
+  }
+  &.title--h4 {
+    font-size: 30px;
     line-height: 1.12;
   }
 }
