--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -28,6 +28,7 @@
 @import 'buttons';
 @import 'typography';
 @import 'accordeons';
+@import 'tabs';
 @import 'memory';
 @import 'forms';
 @import 'footer';
