--- a/assets/scss/_tabs.scss
+++ b/assets/scss/_tabs.scss
@@ -47,5 +47,9 @@
   position: relative;
   overflow: hidden;
   height: 0px;
+  opacity: 0;
   transition: 0.3s;
+  &.active {
+    opacity: 1;
+  }
 }
