--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -39,3 +39,5 @@
 @import 'section__weekprizes';
 @import 'secsion__garanty';
 @import 'section__winners';
+@import 'section__lk';
+@import 'section__memory';
