--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1012,9 +1012,32 @@ a {
   background-size: 100% auto;
 }
 
+.logout-button {
+  display: flex;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  width: 50px;
+  height: 50px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  transition: 0.3s;
+  color: var(--black);
+}
+.logout-button:hover {
+  color: var(--bg);
+}
+
 .title {
   font-family: var(--3);
   text-transform: uppercase;
+}
+.title.title--h1 {
+  font-size: 68px;
+  text-align: center;
+  font-family: var(--2);
 }
 .title.title--h2 {
   font-size: 44px;
@@ -1027,6 +1050,49 @@ a {
 .title.title--h4 {
   font-size: 30px;
   line-height: 1.12;
+}
+.title.title--hero {
+  display: block;
+  width: 100%;
+  max-width: 654px;
+  margin-left: 100px;
+  font-size: 68px;
+  line-height: 1.2;
+  flex-shrink: 0;
+}
+.title.title--hero span {
+  display: block;
+  position: relative;
+  text-transform: uppercase;
+  font-family: var(--2);
+  width: 100%;
+}
+.title.title--hero span:last-child {
+  text-align: right;
+}
+.title.title--hero span.underline {
+  display: inline-block;
+  width: auto;
+  position: relative;
+  z-index: 0;
+}
+.title.title--hero span.underline:before {
+  content: "";
+  position: absolute;
+  background: url("../img/svg/underline.svg") no-repeat left center;
+  background-size: 530px 100%;
+  width: 0%;
+  height: 20px;
+  bottom: 4px;
+  left: -14%;
+  z-index: -1;
+  opacity: 0;
+  transition: 1s ease 0.5s;
+}
+
+.loaded .title.title--hero span.underline:before {
+  opacity: 1;
+  width: 124%;
 }
 
 .accordeon {
@@ -1256,8 +1322,20 @@ a {
   transform: rotateY(180deg);
   z-index: 1;
 }
-.card.active .flip, .card:hover .flip {
+.card.active .flip {
   transform: rotateY(180deg);
+}
+
+.fact-image {
+  position: relative;
+  width: 550px;
+  height: 280px;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  margin-top: -160px;
+}
+.fact-image img {
+  height: 100%;
 }
 
 :root {
@@ -1364,6 +1442,7 @@ span.input-icon {
 .textarea.input-search {
   padding-right: var(--input-height);
   width: 100%;
+  max-width: 100%;
   height: 56px;
   border-radius: 16px;
   font-family: var(--4);
@@ -2065,49 +2144,6 @@ body.locked {
   padding-top: 11%;
   padding-bottom: 80px;
 }
-.section--hero .container .title {
-  display: block;
-  width: 100%;
-  max-width: 654px;
-  margin-left: 100px;
-  font-size: 68px;
-  line-height: 1.2;
-  flex-shrink: 0;
-}
-.section--hero .container .title span {
-  display: block;
-  position: relative;
-  text-transform: uppercase;
-  font-family: var(--2);
-  width: 100%;
-}
-.section--hero .container .title span:last-child {
-  text-align: right;
-}
-.section--hero .container .title span.underline {
-  display: inline-block;
-  width: auto;
-  position: relative;
-  z-index: 0;
-}
-.section--hero .container .title span.underline:before {
-  content: "";
-  position: absolute;
-  background: url("../img/svg/underline.svg") no-repeat left center;
-  background-size: 530px 100%;
-  width: 0%;
-  height: 20px;
-  bottom: 4px;
-  left: -14%;
-  z-index: -1;
-  opacity: 0;
-  transition: 1s ease 0.5s;
-}
-
-.loaded .section--hero .container .title span.underline:before {
-  opacity: 1;
-  width: 124%;
-}
 
 .hero-background {
   position: fixed;
@@ -2524,14 +2560,14 @@ body.locked {
   gap: 20px;
   margin: 50px auto 60px auto;
 }
-.winners-filters .label {
+.winners-filters > .label {
   max-width: 240px;
 }
-.winners-filters .label .input-icon {
+.winners-filters > .label .input-icon {
   height: 56px;
   width: 56px;
 }
-.winners-filters .label .input-icon svg {
+.winners-filters > .label .input-icon svg {
   width: 14px;
   height: 8px;
 }
@@ -2541,6 +2577,7 @@ body.locked {
 }
 .winners-filters form label {
   position: relative;
+  width: 100%;
 }
 .winners-filters form button {
   width: 66px;
@@ -2576,6 +2613,10 @@ body.locked {
 .table tr td:last-child {
   padding-right: 0px;
   white-space: wrap;
+}
+.table tr th img,
+.table tr td img {
+  width: 85px;
 }
 .table th {
   font-family: var(--4);
@@ -2642,4 +2683,227 @@ body.locked {
 .pagination-btn.prev:disabled, .pagination-btn.next:disabled {
   opacity: 0.3;
   pointer-events: none;
+}
+
+.section--lk {
+  min-height: 100vh;
+  padding: 150px 0px;
+}
+.section--lk .container {
+  max-width: 1020px;
+  display: flex;
+  position: relative;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+  gap: 100px;
+}
+.section--lk .container .title--h2 {
+  color: var(--yellow);
+}
+.section--lk .table {
+  margin-top: 10px;
+}
+.section--lk .table tr th:first-child,
+.section--lk .table tr td:first-child {
+  padding-left: 60px;
+}
+.section--lk .table tr th:nth-child(3),
+.section--lk .table tr td:nth-child(3) {
+  white-space: initial;
+  max-width: 300px;
+}
+.section--lk .table tr th:last-child,
+.section--lk .table tr td:last-child {
+  padding-right: 60px;
+  max-width: 170px;
+  white-space: nowrap;
+}
+.section--lk .table th {
+  border-bottom: 2px solid var(--yellow);
+}
+.section--lk .table tbody td {
+  border-bottom: 1px solid var(--white);
+}
+
+.lk-head {
+  display: flex;
+  position: relative;
+  width: 100%;
+  justify-content: space-between;
+  gap: 56px;
+}
+.lk-head li {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  width: calc((100% - 56px) / 2);
+  min-height: 295px;
+  border-radius: 24px;
+  position: relative;
+  overflow: hidden;
+  padding: 34px 68px 34px 34px;
+  background: var(--white);
+  color: var(--black);
+}
+.lk-head li:last-child {
+  background: var(--white) url("../img/lk-bg.webp") no-repeat right 5px;
+  background-size: 210px auto;
+}
+.lk-head .lk-head__title {
+  font-size: 30px;
+  text-transform: uppercase;
+  color: var(--bg);
+  line-height: 1.12;
+  margin-bottom: 20px;
+}
+.lk-head .contacts {
+  display: flex;
+  position: relative;
+  width: 100%;
+  flex-direction: column;
+  gap: 14px;
+}
+.lk-head .contacts p {
+  font-size: 20px;
+}
+.lk-head .contacts p a {
+  transition: 0.3s;
+  color: currentColor;
+}
+.lk-head .contacts p a:hover {
+  color: var(--bg);
+}
+.lk-head a {
+  font-family: var(--4);
+}
+.lk-head p {
+  font-size: 24px;
+  font-family: var(--4);
+  font-weight: 400;
+  line-height: 1.12;
+}
+.lk-head p .link {
+  color: var(--bg);
+}
+
+.lk-content {
+  width: 100%;
+  display: flex;
+  position: relative;
+  width: 100%;
+  flex-direction: column;
+}
+.lk-content .subtitle {
+  display: block;
+  font-size: 24px;
+  font-family: var(--4);
+  text-align: center;
+  margin-top: 46px;
+}
+.lk-content .button {
+  margin: 0 auto;
+  margin-top: 46px;
+}
+
+.section--memory {
+  min-height: 100svh;
+  background: url("../img/game-bg.webp") no-repeat center center/cover;
+}
+
+.swiper--memory {
+  width: 100%;
+  height: 100svh;
+  min-height: 100svh;
+}
+.swiper--memory .swiper-slide {
+  display: grid;
+  place-items: center;
+  position: relative;
+  height: 100svh;
+  transition: 1s;
+  opacity: 0;
+  padding: 100px 20px 40px 20px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  -ms-scroll-chaining: none;
+      overscroll-behavior: contain;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.swiper--memory .swiper-slide:-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  display: none;
+}
+.swiper--memory .swiper-slide.swiper-slide-active {
+  opacity: 1;
+}
+
+.memory-board {
+  display: flex;
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 780px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 20px;
+}
+.memory-board .title {
+  margin: 0;
+}
+.memory-board .subtitle {
+  text-align: center;
+  font-size: 22px;
+  font-family: var(--4);
+}
+.memory-board .button {
+  margin-top: 14px;
+}
+.memory-board .memory-preview {
+  max-width: 300px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.memory-board .memory-board__text {
+  display: flex;
+  position: relative;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 30px;
+  margin: 0px auto 20px auto;
+}
+
+.memory-game-wrapper {
+  display: flex;
+  position: relative;
+  width: 100%;
+  max-width: 1200px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 24px;
+}
+.memory-game-wrapper li {
+  width: calc((100% - 144px) / 7);
+}
+.memory-game-wrapper .card .flip__front:before {
+  -webkit-animation: none;
+          animation: none;
+  transition: 0.3s;
+  transform: scale(1);
+}
+.memory-game-wrapper .card:hover .flip__front:before {
+  transform: scale(1.1);
 }
