--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -128,3 +128,21 @@
   background: url('../img/arrow-down.gif') no-repeat center center;
   background-size: 100% auto;
 }
+
+.logout-button {
+  display: flex;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  width: 50px;
+  height: 50px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  transition: 0.3s;
+  color: var(--black);
+  &:hover {
+    color: var(--bg);
+  }
+}
