--- a/assets/scss/_memory.scss
+++ b/assets/scss/_memory.scss
@@ -90,8 +90,19 @@
     z-index: 1;
   }
 
-  &.active .flip,
-  &:hover .flip {
+  &.active .flip {
     transform: rotateY(180deg);
+  }
+}
+
+.fact-image {
+  position: relative;
+  width: 550px;
+  height: 280px;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  margin-top: -160px;
+  img {
+    height: 100%;
   }
 }
