--- a/assets/scss/_section__winners.scss
+++ b/assets/scss/_section__winners.scss
@@ -21,7 +21,7 @@
   gap: 20px;
   margin: 50px auto 60px auto;
 
-  .label {
+  > .label {
     max-width: 240px;
     .input-icon {
       height: 56px;
@@ -38,6 +38,7 @@
     max-width: 346px;
     label {
       position: relative;
+      width: 100%;
     }
     button {
       width: 66px;
@@ -73,6 +74,9 @@
       &:last-child {
         padding-right: 0px;
         white-space: wrap;
+      }
+      img {
+        width: 85px;
       }
     }
   }
